--- a/index.html
+++ b/index.html
@@ -5,6 +5,325 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Select Your Best Five</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body class="bg-dark">
+    <!-- hrader section -->
+    <header class="bg-black w-100">
+      <div class="pt-5 text-center">
+        <div class="row w-100 align-items-center">
+          <div class="col">
+            <img class="w-100" src="/players/ny-logo.jpg" alt="" />
+          </div>
+          <div class="col text-white">
+            <h2 class="word-break text-danger">Select Your Best Five</h2>
+            <p class="mt-5">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet
+            </p>
+          </div>
+          <div class="col">
+            <img class="w-50" src="/players/psg-logo.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="container mt-5 pt-5">
+        <div class="d-flex">
+          <div class="row row-cols-1 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-1.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-1">1. Naymer</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w ms-4">
+            <div class="col Selected-player">
+              <div class="card">
+                <div class="card-body bg-black text-white select-v">
+                  <h5 class="card-title">Selected - V</h5>
+                  <ul id="player-list"></ul>
+                </div>
+              </div>
+            </div>
+            <div class="col mt-5">
+              <div class="card bg-black text-white">
+                <div class="card-body calculate">
+                  <h5 class="card-title text-center">Budget</h5>
+                  <div
+                    class="d-flex mt-3 align-items-center justify-content-between"
+                  >
+                    <p class="fs-6">Player:</p>
+                    <input
+                      id="per-player-input"
+                      class="w-50 bg-black text-white"
+                      type="text"
+                    />
+                  </div>
+                  <button
+                    type="button"
+                    id="calculate-btn"
+                    class="btn btn-primary m-4 text-center w-75"
+                  >
+                    Calculate
+                  </button>
+                  <p>Expence:$<span id="player-expence">00</span></p>
+                  <div
+                    class="d-flex mt-3 align-items-center justify-content-between"
+                  >
+                    <p>Manger :</p>
+                    <input
+                      class="w-50 bg-black text-white"
+                      id="manger-input"
+                      type="text"
+                    />
+                  </div>
+                  <div
+                    class="d-flex mt-3 align-items-center justify-content-between"
+                  >
+                    <p>Coach :</p>
+                    <input
+                      class="w-50 bg-black text-white"
+                      id="coach-input"
+                      type="text"
+                    />
+                  </div>
+                  <button
+                    type="button"
+                    id="total-calculate-btn"
+                    class="btn btn-primary m-4 w-75 text-center"
+                  >
+                    Total
+                  </button>
+
+                  <p class="text-danger">
+                    Total : $ <span id="total-cost">00</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="/index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
