--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@
           </div>
         </div>
       </section>
+      <footer class="footer-section text-center">
+        <p class="text-white">Copyright @ 2022 All Rights Reserved</p>
+      </footer>
     </main>
     <script src="/index.js"></script>
     <script
