--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-1">1. Naymer</h5>
+                  <h5 class="card-title" id="player-name-1">Naymer jr</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -71,7 +71,7 @@
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-1">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-1">Messi</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -89,12 +89,12 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="/players/player-2.png"
+                  src="/players/player-3.png"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-2">Ronaldo</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -112,12 +112,12 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="/players/player-2.png"
+                  src="/players/player-4.png"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-2">Rs Mahmud</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -135,12 +135,12 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="/players/player-2.png"
+                  src="/players/player-5.png"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-2">Rs Mahmud</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -158,36 +158,12 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="/players/player-2.png"
+                  src="/players/player-6.png"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
-                  <div class="d-flex justify-content-center">
-                    <p class="card-text">1. Gole-30</p>
-                    <p>2. Assiest-120</p>
-                  </div>
-                  <button
-                    type="button"
-                    id="select-player"
-                    class="btn btn-primary"
-                  >
-                    Selected
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card">
-                <img
-                  src="/players/player-2.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-2">Rs Mahmud</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -206,12 +182,36 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="/players/player-2.png"
+                  src="/players/player-7.png"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-2">Rs Mahmud</h5>
+                  <div class="d-flex justify-content-center">
+                    <p class="card-text">1. Gole-30</p>
+                    <p>2. Assiest-120</p>
+                  </div>
+                  <button
+                    type="button"
+                    id="select-player"
+                    class="btn btn-primary"
+                  >
+                    Selected
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/players/player-8.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body bg-black text-white text-center">
+                  <h5 class="card-title" id="player-name-2">Rs Mahmud</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
@@ -229,12 +229,12 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="/players/player-2.png"
+                  src="/players/player-9.png"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body bg-black text-white text-center">
-                  <h5 class="card-title" id="player-name-2">2. Naymer Jr</h5>
+                  <h5 class="card-title" id="player-name-2">Rs Mahmud</h5>
                   <div class="d-flex justify-content-center">
                     <p class="card-text">1. Gole-30</p>
                     <p>2. Assiest-120</p>
